--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-# Compiled class file
-*.class
+# gradle
+.gradle/
+gradle/
+build/
+out/
+classes/
 
-# Log file
-*.log
+# eclipse
 
-# BlueJ files
-*.ctxt
+*.launch
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# idea
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+.idea/
+*.iml
+*.ipr
+*.iws
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# vscode
+
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# macos
+
+*.DS_Store
+
+# fabric
+
+run/
+
+# github
+.github/
