--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.14.3'
 	implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 	implementation 'com.alibaba:fastjson:1.2.79'
+
+	implementation 'com.github.oshi:oshi-core-java11:6.1.2'
+
 }
 
 processResources {
